# mammogram-cancer-detection

./: .gitignore  EXPERIMENT_LOG.md  IMPROVEMENT_PLAN.md  NEBIUS_SETUP.md  PROJECT_PLAN.md  README.md  experiment.env  main.py  pyproject.toml  run_experiment.sh  test_experiment.sh
data/mock/: train.csv  train_processed.csv
data/mock/train_images/10000/: 100000.dcm  100001.dcm  100002.dcm  100003.dcm
data/mock/train_images/10001/: 100010.dcm  100011.dcm  100012.dcm  100013.dcm
data/mock/train_images/10002/: 100020.dcm  100021.dcm  100022.dcm  100023.dcm
data/mock/train_images/10003/: 100030.dcm  100031.dcm  100032.dcm  100033.dcm
data/mock/train_images/10004/: 100040.dcm  100041.dcm  100042.dcm  100043.dcm
data/mock/train_images/10005/: 100050.dcm  100051.dcm  100052.dcm  100053.dcm
data/mock/train_images/10006/: 100060.dcm  100061.dcm  100062.dcm  100063.dcm
data/mock/train_images/10007/: 100070.dcm  100071.dcm  100072.dcm  100073.dcm
data/mock/train_images/10008/: 100080.dcm  100081.dcm  100082.dcm  100083.dcm
data/mock/train_images/10009/: 100090.dcm  100091.dcm  100092.dcm  100093.dcm
experiments/2024-12-17-efficientnet-b0-baseline/: config.json
outputs/: qa_predictions.csv
outputs/qa_review/: index.html
src/: __init__.py  dataset.py  generate_report.py  model.py  predict.py  predict_qa.py  preprocess.py  train.py
tests/: create_mock_data.py
