[project]
name = "breast-cancer-detection"
version = "0.1.0"
description = "Breast cancer detection from mammograms using deep learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "timm>=0.9.0",
    "pydicom>=2.4.0",
    "pylibjpeg>=2.0",
    "pylibjpeg-libjpeg>=2.1",
    "opencv-python>=4.8.0",
    "albumentations>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "Pillow>=10.0.0",
]
